Fixed issue with the menu on small screens

--- a/client/css/site.css
+++ b/client/css/site.css
@@ -27,13 +27,8 @@ body
 	padding:10px;
 	max-width:500px;
 	max-height:450px;
-	position:absolute;
+	position:relative;
 	overflow:hidden;
-	top:0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
 }
 
 #loginbox
